--- a/resources/language/ak.json
+++ b/resources/language/ak.json
@@ -23,6 +23,12 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "Azerbaijani"
     },
@@ -65,6 +71,15 @@
     "br": {
         "name": "Breton"
     },
+    "en-GB": {
+        "name": "British English"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "ca": {
         "name": "Catalan"
     },
@@ -83,35 +98,20 @@
     "da": {
         "name": "Danish"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "nl": {
         "name": "Dɛɛkye"
     },
     "dz": {
         "name": "Dzongkha"
     },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "Esperanto"
     },
     "et": {
         "name": "Estonian"
+    },
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
@@ -122,11 +122,8 @@
     "fi": {
         "name": "Finnish"
     },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+    "nl-BE": {
+        "name": "Flemish"
     },
     "fr": {
         "name": "Frɛnkye"
@@ -284,6 +281,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -298,9 +301,6 @@
     },
     "ne": {
         "name": "Nɛpal kasa"
-    },
-    "nl-BE": {
-        "name": "nl_BE"
     },
     "se": {
         "name": "Northern Sami"
@@ -329,9 +329,6 @@
     "pt": {
         "name": "Pɔɔtugal kasa"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
     "pa": {
         "name": "Pungyabi kasa"
     },
@@ -343,9 +340,6 @@
     },
     "rw": {
         "name": "Rewanda kasa"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rm": {
         "name": "Romansh"
@@ -371,6 +365,9 @@
     "sr": {
         "name": "Serbian"
     },
+    "zh-Hans": {
+        "name": "Simplified Chinese"
+    },
     "si": {
         "name": "Sinhala"
     },
@@ -392,8 +389,14 @@
     "sv": {
         "name": "Sweden kasa"
     },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
     "gsw": {
         "name": "Swiss German"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "th": {
         "name": "Taeland kasa"
@@ -415,6 +418,9 @@
     },
     "to": {
         "name": "Tongan"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "uk": {
         "name": "Ukren kasa"
@@ -454,12 +460,6 @@
     },
     "dje": {
         "name": "Zarma"
-    },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     },
     "zu": {
         "name": "Zulu"
