--- a/resources/language/am.json
+++ b/resources/language/am.json
@@ -8,14 +8,14 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "fur": {
         "name": "Friulian"
     },
     "ff": {
         "name": "Fulah"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "wae": {
         "name": "Walser"
