--- a/resources/language/ast.json
+++ b/resources/language/ast.json
@@ -35,6 +35,12 @@
     "ast": {
         "name": "asturianu"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "azerbaixanu"
     },
@@ -116,14 +122,8 @@
     "da": {
         "name": "danés"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "dz": {
         "name": "dzongkha"
-    },
-    "en-AU": {
-        "name": "en_AU"
     },
     "sk": {
         "name": "eslovacu"
@@ -142,6 +142,9 @@
     },
     "et": {
         "name": "estoniu"
+    },
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "ewe"
@@ -352,9 +355,6 @@
     },
     "pt": {
         "name": "portugués"
-    },
-    "pt-PT": {
-        "name": "pt_PT"
     },
     "pa": {
         "name": "punyabí"
