--- a/resources/language/be.json
+++ b/resources/language/be.json
@@ -296,6 +296,9 @@
     "brx": {
         "name": "Bodo"
     },
+    "en-GB": {
+        "name": "British English"
+    },
     "my": {
         "name": "Burmese"
     },
@@ -311,11 +314,8 @@
     "dz": {
         "name": "Dzongkha"
     },
-    "en-GB": {
-        "name": "en_GB"
-    },
-    "es-MX": {
-        "name": "es_MX"
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
@@ -398,6 +398,9 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "mfe": {
         "name": "Morisyen"
     },
@@ -418,9 +421,6 @@
     },
     "om": {
         "name": "Oromo"
-    },
-    "pt-PT": {
-        "name": "pt_PT"
     },
     "qu": {
         "name": "Quechua"
