--- a/resources/language/bg.json
+++ b/resources/language/bg.json
@@ -456,7 +456,7 @@
         "name": "Colognian"
     },
     "pt-PT": {
-        "name": "pt_PT"
+        "name": "European Portuguese"
     },
     "wae": {
         "name": "Walser"
