--- a/resources/language/brx.json
+++ b/resources/language/brx.json
@@ -20,8 +20,8 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "dyo": {
         "name": "Jola-Fonyi"
@@ -44,6 +44,9 @@
     "mgh": {
         "name": "Makhuwa-Meetto"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "mfe": {
         "name": "Morisyen"
     },
@@ -52,9 +55,6 @@
     },
     "naq": {
         "name": "Nama"
-    },
-    "pt-PT": {
-        "name": "pt_PT"
     },
     "rof": {
         "name": "Rombo"
