--- a/resources/language/bs-Cyrl.json
+++ b/resources/language/bs-Cyrl.json
@@ -413,9 +413,6 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "dyo": {
         "name": "Jola-Fonyi"
     },
@@ -436,6 +433,9 @@
     },
     "mgh": {
         "name": "Makhuwa-Meetto"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "mfe": {
         "name": "Morisyen"
