--- a/resources/language/bs.json
+++ b/resources/language/bs.json
@@ -95,6 +95,9 @@
     "et": {
         "name": "estonski"
     },
+    "pt-PT": {
+        "name": "European Portuguese"
+    },
     "ee": {
         "name": "eve"
     },
@@ -349,9 +352,6 @@
     },
     "pt": {
         "name": "portugalski"
-    },
-    "pt-PT": {
-        "name": "pt_PT"
     },
     "rm": {
         "name": "reto-romanski"
