--- a/resources/language/dz.json
+++ b/resources/language/dz.json
@@ -35,9 +35,6 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "ee": {
         "name": "Ewe"
     },
@@ -95,6 +92,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -115,9 +118,6 @@
     },
     "om": {
         "name": "Oromo"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rof": {
         "name": "Rombo"
