--- a/resources/language/et.json
+++ b/resources/language/et.json
@@ -29,6 +29,12 @@
     "ast": {
         "name": "astuuria"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "ksf": {
         "name": "bafia"
     },
@@ -62,29 +68,23 @@
     "bg": {
         "name": "bulgaaria"
     },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "cgg": {
         "name": "chiga"
     },
     "ksh": {
         "name": "cologniani"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "dz": {
         "name": "dzongkha"
     },
     "et": {
         "name": "eesti"
-    },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "eo": {
         "name": "esperanto"
@@ -94,12 +94,6 @@
     },
     "nl-BE": {
         "name": "flaami"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fur": {
         "name": "friuuli"
@@ -293,6 +287,9 @@
     "mfe": {
         "name": "Mauritiuse kreoolkeel"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "ro-MD": {
         "name": "moldova"
     },
@@ -397,6 +394,9 @@
     },
     "zu": {
         "name": "suulu"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "gsw": {
         "name": "šveitsisaksa"
