--- a/resources/language/eu.json
+++ b/resources/language/eu.json
@@ -35,6 +35,12 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "azerbaijanera"
     },
@@ -71,6 +77,9 @@
     "br": {
         "name": "bretoiera"
     },
+    "en-GB": {
+        "name": "British English"
+    },
     "bg": {
         "name": "bulgariera"
     },
@@ -79,6 +88,12 @@
     },
     "kea": {
         "name": "Cabo Verdeko kreola"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
     },
     "cgg": {
         "name": "chigera"
@@ -89,20 +104,8 @@
     "da": {
         "name": "daniera"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "dz": {
         "name": "dzongkha"
-    },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
     },
     "rm": {
         "name": "erromantxera"
@@ -112,9 +115,6 @@
     },
     "ru": {
         "name": "errusiera"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "gd": {
         "name": "eskoziako gaelikoa"
@@ -151,12 +151,6 @@
     },
     "dyo": {
         "name": "fonyi jolera"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fr": {
         "name": "frantsesa"
@@ -329,6 +323,12 @@
     "mk": {
         "name": "mazedoniera"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "mongoliera"
     },
@@ -371,9 +371,6 @@
     "qu": {
         "name": "quechuera"
     },
-    "ro-MD": {
-        "name": "ro_MD"
-    },
     "rof": {
         "name": "romboera"
     },
@@ -400,6 +397,9 @@
     },
     "sw": {
         "name": "swahili"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "ta": {
         "name": "tamilera"
