--- a/resources/language/fur.json
+++ b/resources/language/fur.json
@@ -104,9 +104,6 @@
     "he": {
         "name": "ebraic"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "esperanto"
     },
@@ -289,6 +286,9 @@
     },
     "mas": {
         "name": "Masai"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "ro-MD": {
         "name": "moldâf"
