--- a/resources/language/gl.json
+++ b/resources/language/gl.json
@@ -311,6 +311,9 @@
     "mas": {
         "name": "masai"
     },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "mongol"
     },
@@ -358,9 +361,6 @@
     },
     "ky": {
         "name": "quirguiz"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rm": {
         "name": "romanche"
