--- a/resources/language/gsw.json
+++ b/resources/language/gsw.json
@@ -86,9 +86,6 @@
     "et": {
         "name": "Eestnisch"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "Eschperanto"
     },
@@ -265,6 +262,9 @@
     },
     "mk": {
         "name": "Mazedonisch"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "ro-MD": {
         "name": "Moldawisch"
