--- a/resources/language/haw.json
+++ b/resources/language/haw.json
@@ -1,4 +1,7 @@
 {
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "af": {
         "name": "Afrikaans"
     },
@@ -23,8 +26,8 @@
     "az": {
         "name": "Azerbaijani"
     },
-    "es-MX": {
-        "name": "es_MX"
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "eo": {
         "name": "Esperanto"
@@ -122,12 +125,6 @@
     "cs": {
         "name": "Czech"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "Dzongkha"
     },
@@ -139,6 +136,9 @@
     },
     "ff": {
         "name": "Fulah"
+    },
+    "nl-BE": {
+        "name": "Flemish"
     },
     "fur": {
         "name": "Friulian"
@@ -284,6 +284,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -307,9 +313,6 @@
     },
     "nn": {
         "name": "Norwegian Nynorsk"
-    },
-    "nl-BE": {
-        "name": "nl_BE"
     },
     "nyn": {
         "name": "Nyankole"
@@ -356,14 +359,8 @@
     "pa": {
         "name": "Punjabi"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
     "qu": {
         "name": "Quechua"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "Romanian"
@@ -403,6 +400,9 @@
     },
     "sw": {
         "name": "Swahili"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "ta": {
         "name": "Tamil"
