--- a/resources/language/ja.json
+++ b/resources/language/ja.json
@@ -1,15 +1,15 @@
 {
     "de-AT": {
-        "name": "de_AT"
-    },
-    "es-MX": {
-        "name": "es_MX"
+        "name": "Austrian German"
     },
     "fr-CA": {
-        "name": "fr_CA"
+        "name": "Canadian French"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "fr-CH": {
-        "name": "fr_CH"
+        "name": "Swiss French"
     },
     "is": {
         "name": "アイスランド語"
