--- a/resources/language/kea.json
+++ b/resources/language/kea.json
@@ -278,6 +278,9 @@
     "mk": {
         "name": "masedoniu"
     },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -328,9 +331,6 @@
     },
     "pt-PT": {
         "name": "purtuges europeu"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rm": {
         "name": "romanxi"
