--- a/resources/language/km.json
+++ b/resources/language/km.json
@@ -350,23 +350,17 @@
     "brx": {
         "name": "Bodo"
     },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "cgg": {
         "name": "Chiga"
     },
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "ee": {
         "name": "Ewe"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fur": {
         "name": "Friulian"
@@ -422,6 +416,9 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "mfe": {
         "name": "Morisyen"
     },
@@ -448,6 +445,9 @@
     },
     "seh": {
         "name": "Sena"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "twq": {
         "name": "Tasawaq"
