--- a/resources/language/ko.json
+++ b/resources/language/ko.json
@@ -459,9 +459,9 @@
         "name": "힌디어"
     },
     "de-AT": {
-        "name": "de_AT"
+        "name": "Austrian German"
     },
     "es-MX": {
-        "name": "es_MX"
+        "name": "Mexican Spanish"
     }
 }
