--- a/resources/language/ks.json
+++ b/resources/language/ks.json
@@ -20,9 +20,6 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "dyo": {
         "name": "Jola-Fonyi"
     },
@@ -43,6 +40,9 @@
     },
     "mgh": {
         "name": "Makhuwa-Meetto"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "mfe": {
         "name": "Morisyen"
