--- a/resources/language/ksh.json
+++ b/resources/language/ksh.json
@@ -284,6 +284,9 @@
     "mk": {
         "name": "Mazedoonesch"
     },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongjolesch"
     },
@@ -337,9 +340,6 @@
     },
     "rm": {
         "name": "Rätoromaanesch"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "Rumänesch"
