--- a/resources/language/lkt.json
+++ b/resources/language/lkt.json
@@ -23,6 +23,12 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "Azerbaijani Iyápi"
     },
@@ -62,6 +68,12 @@
     "my": {
         "name": "Burmese Iyápi"
     },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "ca": {
         "name": "Catalan Iyápi"
     },
@@ -83,32 +95,20 @@
     "da": {
         "name": "Dane Iyápi"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "nl": {
         "name": "Dutch Iyápi"
     },
     "dz": {
         "name": "Dzongkha"
     },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "Esperanto Iyápi"
     },
     "et": {
         "name": "Estonia Iyápi"
+    },
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
@@ -121,12 +121,6 @@
     },
     "nl-BE": {
         "name": "Flemish Iyápi"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fur": {
         "name": "Friulian"
@@ -278,6 +272,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -329,17 +329,11 @@
     "pt": {
         "name": "Portuguese Iyápi"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
     "pa": {
         "name": "Punjabi Iyápi"
     },
     "qu": {
         "name": "Quechua Iyápi"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "Romanian Iyápi"
@@ -392,8 +386,14 @@
     "sv": {
         "name": "Swedish Iyápi"
     },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
     "gsw": {
         "name": "Swiss German"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "ta": {
         "name": "Tamil Iyápi"
