--- a/resources/language/lu.json
+++ b/resources/language/lu.json
@@ -17,6 +17,12 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "Azerbaijani"
     },
@@ -50,11 +56,20 @@
     "br": {
         "name": "Breton"
     },
+    "en-GB": {
+        "name": "British English"
+    },
     "bg": {
         "name": "Bulegari"
     },
     "my": {
         "name": "Burmese"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
     },
     "ca": {
         "name": "Catalan"
@@ -74,32 +89,17 @@
     "da": {
         "name": "Danish"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "Dzongkha"
-    },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "eo": {
         "name": "Esperanto"
     },
     "et": {
         "name": "Estonian"
+    },
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
@@ -110,11 +110,8 @@
     "fi": {
         "name": "Finnish"
     },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+    "nl-BE": {
+        "name": "Flemish"
     },
     "fur": {
         "name": "Friulian"
@@ -293,8 +290,14 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "fr": {
         "name": "Mfwàlànsa"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
     },
     "mn": {
         "name": "Mongolian"
@@ -325,9 +328,6 @@
     },
     "uk": {
         "name": "Nkrani"
-    },
-    "nl-BE": {
-        "name": "nl_BE"
     },
     "se": {
         "name": "Northern Sami"
@@ -362,14 +362,8 @@
     "om": {
         "name": "Oromo"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
     "qu": {
         "name": "Quechua"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rm": {
         "name": "Romansh"
@@ -395,6 +389,9 @@
     "zh": {
         "name": "shinɛ"
     },
+    "zh-Hans": {
+        "name": "Simplified Chinese"
+    },
     "si": {
         "name": "Sinhala"
     },
@@ -407,8 +404,14 @@
     "sw": {
         "name": "Swahili"
     },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
     "gsw": {
         "name": "Swiss German"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "twq": {
         "name": "Tasawaq"
@@ -421,6 +424,9 @@
     },
     "to": {
         "name": "Tongan"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "cs": {
         "name": "Tsheki"
@@ -457,11 +463,5 @@
     },
     "dje": {
         "name": "Zarma"
-    },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     }
 }
