--- a/resources/language/mk.json
+++ b/resources/language/mk.json
@@ -443,25 +443,25 @@
     "es": {
         "name": "шпански"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "en-AU": {
-        "name": "en_AU"
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
     },
     "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+        "name": "Canadian English"
     },
     "nl-BE": {
-        "name": "nl_BE"
+        "name": "Flemish"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     }
 }
