--- a/resources/language/mt.json
+++ b/resources/language/mt.json
@@ -20,6 +20,9 @@
     "ast": {
         "name": "Asturian"
     },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "Ażerbajġani"
     },
@@ -71,6 +74,9 @@
     "zh-Hans": {
         "name": "Ċiniż Simplifikat"
     },
+    "en-CA": {
+        "name": "Canadian English"
+    },
     "tzm": {
         "name": "Central Atlas Tamazight"
     },
@@ -83,29 +89,20 @@
     "da": {
         "name": "Daniż"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "Dżongka"
     },
     "he": {
         "name": "Ebrajk"
     },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "Esperanto"
     },
     "et": {
         "name": "Estonjan"
+    },
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
@@ -115,6 +112,9 @@
     },
     "fi": {
         "name": "Finlandiż"
+    },
+    "nl-BE": {
+        "name": "Flemish"
     },
     "fr": {
         "name": "Franċiż"
@@ -299,6 +299,9 @@
     "mas": {
         "name": "Masaj"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "ro-MD": {
         "name": "Moldavjan"
     },
@@ -320,9 +323,6 @@
     "nn": {
         "name": "Ninorsk Norveġiż"
     },
-    "nl-BE": {
-        "name": "nl_BE"
-    },
     "nyn": {
         "name": "Nyankole"
     },
@@ -343,9 +343,6 @@
     },
     "pt": {
         "name": "Portugiż"
-    },
-    "pt-PT": {
-        "name": "pt_PT"
     },
     "pa": {
         "name": "Punġabi"
@@ -401,6 +398,9 @@
     "gsw": {
         "name": "Swiss German"
     },
+    "de-CH": {
+        "name": "Swiss High German"
+    },
     "th": {
         "name": "Tajlandiż"
     },
@@ -424,6 +424,9 @@
     },
     "tr": {
         "name": "Tork"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "uk": {
         "name": "Ukranjan"
@@ -460,8 +463,5 @@
     },
     "dje": {
         "name": "Zarma"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     }
 }
