--- a/resources/language/nl.json
+++ b/resources/language/nl.json
@@ -278,6 +278,9 @@
     "es-MX": {
         "name": "Mexicaans Spaans"
     },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongools"
     },
@@ -346,9 +349,6 @@
     },
     "rm": {
         "name": "Reto-Romaans"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "Roemeens"
