--- a/resources/language/nn.json
+++ b/resources/language/nn.json
@@ -92,9 +92,6 @@
     "en": {
         "name": "engelsk"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "esperanto"
     },
@@ -289,6 +286,9 @@
     },
     "mas": {
         "name": "masai"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "ro-MD": {
         "name": "moldavisk"
