--- a/resources/language/rm.json
+++ b/resources/language/rm.json
@@ -104,9 +104,6 @@
     "da": {
         "name": "danais"
     },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "dzongkha"
     },
@@ -124,9 +121,6 @@
     },
     "en-CA": {
         "name": "englais canadais"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "eo": {
         "name": "esperanto"
@@ -290,6 +284,9 @@
     "mas": {
         "name": "masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "ro-MD": {
         "name": "moldav"
     },
@@ -394,6 +391,9 @@
     },
     "sv": {
         "name": "svedais"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "th": {
         "name": "tailandais"
