--- a/resources/language/si.json
+++ b/resources/language/si.json
@@ -450,7 +450,7 @@
         "name": "Fulah"
     },
     "ro-MD": {
-        "name": "ro_MD"
+        "name": "Moldavian"
     },
     "gd": {
         "name": "Scottish Gaelic"
