--- a/resources/language/sl.json
+++ b/resources/language/sl.json
@@ -92,9 +92,6 @@
     "dz": {
         "name": "dzonka"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "esperanto"
     },
@@ -292,6 +289,9 @@
     },
     "mas": {
         "name": "masajščina"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "ro-MD": {
         "name": "moldavščina"
