--- a/resources/language/smn.json
+++ b/resources/language/smn.json
@@ -62,11 +62,17 @@
     "br": {
         "name": "Breton"
     },
+    "en-GB": {
+        "name": "British English"
+    },
     "bg": {
         "name": "bulgariakielâ"
     },
     "my": {
         "name": "Burmese"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
     },
     "ca": {
         "name": "Catalan"
@@ -80,23 +86,14 @@
     "ksh": {
         "name": "Colognian"
     },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "Dzongkha"
     },
     "et": {
         "name": "eestikielâ"
     },
-    "en-GB": {
-        "name": "en_GB"
-    },
     "en": {
         "name": "engâlâskielâ"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "es": {
         "name": "espanjakielâ"
@@ -104,17 +101,17 @@
     "eo": {
         "name": "Esperanto"
     },
+    "pt-PT": {
+        "name": "European Portuguese"
+    },
     "ee": {
         "name": "Ewe"
     },
     "fo": {
         "name": "Faroese"
     },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+    "nl-BE": {
+        "name": "Flemish"
     },
     "fur": {
         "name": "Friulian"
@@ -269,6 +266,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "mongoliakielâ"
     },
@@ -283,9 +286,6 @@
     },
     "ne": {
         "name": "neepaalkielâ"
-    },
-    "nl-BE": {
-        "name": "nl_BE"
     },
     "nb": {
         "name": "Norwegian Bokmål"
@@ -311,9 +311,6 @@
     "pt": {
         "name": "portugalkielâ"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
     "pa": {
         "name": "Punjabi"
     },
@@ -325,9 +322,6 @@
     },
     "fr": {
         "name": "ranskakielâ"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "romaniakielâ"
@@ -380,8 +374,14 @@
     "sw": {
         "name": "Swahili"
     },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
     "gsw": {
         "name": "Swiss German"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
     },
     "ta": {
         "name": "Tamil"
