--- a/resources/language/th.json
+++ b/resources/language/th.json
@@ -458,10 +458,10 @@
     "ha": {
         "name": "เฮาชา"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "fr-CA": {
-        "name": "fr_CA"
+        "name": "Canadian French"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
     }
 }
