--- a/resources/language/ug.json
+++ b/resources/language/ug.json
@@ -1,12 +1,12 @@
 {
+    "nl-BE": {
+        "name": "Flemish"
+    },
     "lkt": {
         "name": "Lakota"
     },
-    "nl-BE": {
-        "name": "nl_BE"
-    },
     "ro-MD": {
-        "name": "ro_MD"
+        "name": "Moldavian"
     },
     "zh-Hans": {
         "name": "ئاددىي خەنچە"
