--- a/resources/language/uk.json
+++ b/resources/language/uk.json
@@ -440,28 +440,28 @@
     "ja": {
         "name": "японська"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "en-AU": {
-        "name": "en_AU"
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
     },
     "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
+        "name": "Canadian English"
     },
     "fr-CA": {
-        "name": "fr_CA"
+        "name": "Canadian French"
     },
-    "fr-CH": {
-        "name": "fr_CH"
+    "es-MX": {
+        "name": "Mexican Spanish"
     },
     "zh-Hans": {
-        "name": "zh_Hans"
+        "name": "Simplified Chinese"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "zh-Hant": {
-        "name": "zh_Hant"
+        "name": "Traditional Chinese"
     }
 }
