--- a/resources/language/wae.json
+++ b/resources/language/wae.json
@@ -83,9 +83,6 @@
     "en": {
         "name": "Engliš"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "Esperanto"
     },
@@ -263,6 +260,12 @@
     "mk": {
         "name": "Mazedoniš"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongoliš"
     },
@@ -316,9 +319,6 @@
     },
     "rm": {
         "name": "Rätromaniš"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "rof": {
         "name": "Rombo"
