--- a/resources/language/ee.json
+++ b/resources/language/ee.json
@@ -98,9 +98,6 @@
     "dz": {
         "name": "dzongkhagbe"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "eo": {
         "name": "esperantogbe"
     },
@@ -287,6 +284,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "mongoliagbe"
     },
@@ -328,9 +331,6 @@
     },
     "pa": {
         "name": "pundzabgbe"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
     },
     "ro": {
         "name": "romaniagbe"
