--- a/resources/language/ky.json
+++ b/resources/language/ky.json
@@ -2,32 +2,26 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "bas": {
         "name": "Basaa"
     },
-    "ksh": {
-        "name": "Colognian"
-    },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "en-AU": {
-        "name": "en_AU"
+    "en-GB": {
+        "name": "British English"
     },
     "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
-    "es-MX": {
-        "name": "es_MX"
+        "name": "Canadian English"
     },
     "fr-CA": {
-        "name": "fr_CA"
+        "name": "Canadian French"
     },
-    "fr-CH": {
-        "name": "fr_CH"
+    "ksh": {
+        "name": "Colognian"
     },
     "fur": {
         "name": "Friulian"
@@ -35,8 +29,14 @@
     "ff": {
         "name": "Fulah"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "gd": {
         "name": "Scottish Gaelic"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "wae": {
         "name": "Walser"
