--- a/resources/language/my.json
+++ b/resources/language/my.json
@@ -440,17 +440,17 @@
     "ksh": {
         "name": "Colognian"
     },
-    "es-MX": {
-        "name": "es_MX"
-    },
     "fur": {
         "name": "Friulian"
     },
     "ff": {
         "name": "Fulah"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "ro-MD": {
-        "name": "ro_MD"
+        "name": "Moldavian"
     },
     "gd": {
         "name": "Scottish Gaelic"
