--- a/resources/language/sr-Latn.json
+++ b/resources/language/sr-Latn.json
@@ -20,6 +20,12 @@
     "ast": {
         "name": "Asturijski"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "az": {
         "name": "azerbejdžanski"
     },
@@ -53,11 +59,20 @@
     "br": {
         "name": "bretonski"
     },
+    "en-GB": {
+        "name": "British English"
+    },
     "bg": {
         "name": "bugarski"
     },
     "my": {
         "name": "burmanski"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
     },
     "tzm": {
         "name": "centralnoatlaski tamazigt"
@@ -74,9 +89,6 @@
     "da": {
         "name": "danski"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "dsb": {
         "name": "donji lužičkosrpski"
     },
@@ -86,20 +98,8 @@
     "dz": {
         "name": "džonga"
     },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
     "en": {
         "name": "engleski"
-    },
-    "es-MX": {
-        "name": "es_MX"
     },
     "eo": {
         "name": "esperanto"
@@ -118,12 +118,6 @@
     },
     "nl-BE": {
         "name": "flamanski"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fr": {
         "name": "francuski"
@@ -296,6 +290,9 @@
     "mas": {
         "name": "masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
     "ro-MD": {
         "name": "moldavski"
     },
@@ -368,6 +365,9 @@
     "se": {
         "name": "severni sami"
     },
+    "zh-Hans": {
+        "name": "Simplified Chinese"
+    },
     "si": {
         "name": "sinhalski"
     },
@@ -385,6 +385,9 @@
     },
     "sw": {
         "name": "svahili"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "gd": {
         "name": "Škotski Galski"
@@ -418,6 +421,9 @@
     },
     "to": {
         "name": "tonga"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "tr": {
         "name": "turski"
@@ -454,12 +460,6 @@
     },
     "kea": {
         "name": "zelenortski kreolski"
-    },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     },
     "zu": {
         "name": "zulu"
