--- a/resources/language/sr.json
+++ b/resources/language/sr.json
@@ -428,40 +428,40 @@
     "es": {
         "name": "шпански"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
+    "en-GB": {
+        "name": "British English"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "ksh": {
         "name": "Colognian"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
     "es-MX": {
-        "name": "es_MX"
+        "name": "Mexican Spanish"
     },
-    "fr-CA": {
-        "name": "fr_CA"
+    "zh-Hans": {
+        "name": "Simplified Chinese"
     },
     "fr-CH": {
-        "name": "fr_CH"
+        "name": "Swiss French"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "wae": {
         "name": "Walser"
     },
     "yav": {
         "name": "Yangben"
-    },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     }
 }
