--- a/resources/language/ur.json
+++ b/resources/language/ur.json
@@ -456,7 +456,7 @@
         "name": "Fulah"
     },
     "ro-MD": {
-        "name": "ro_MD"
+        "name": "Moldavian"
     },
     "wae": {
         "name": "Walser"
