--- a/resources/language/uz-Cyrl.json
+++ b/resources/language/uz-Cyrl.json
@@ -8,6 +8,12 @@
     "ast": {
         "name": "Asturian"
     },
+    "en-AU": {
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
+    },
     "ksf": {
         "name": "Bafia"
     },
@@ -26,6 +32,15 @@
     "br": {
         "name": "Breton"
     },
+    "en-GB": {
+        "name": "British English"
+    },
+    "en-CA": {
+        "name": "Canadian English"
+    },
+    "fr-CA": {
+        "name": "Canadian French"
+    },
     "tzm": {
         "name": "Central Atlas Tamazight"
     },
@@ -35,35 +50,14 @@
     "ksh": {
         "name": "Colognian"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
-    "de-CH": {
-        "name": "de_CH"
-    },
     "dz": {
         "name": "Dzongkha"
     },
-    "en-AU": {
-        "name": "en_AU"
-    },
-    "en-CA": {
-        "name": "en_CA"
-    },
-    "en-GB": {
-        "name": "en_GB"
-    },
-    "es-MX": {
-        "name": "es_MX"
+    "pt-PT": {
+        "name": "European Portuguese"
     },
     "ee": {
         "name": "Ewe"
-    },
-    "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
     },
     "fur": {
         "name": "Friulian"
@@ -119,6 +113,12 @@
     "mas": {
         "name": "Masai"
     },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "ro-MD": {
+        "name": "Moldavian"
+    },
     "mn": {
         "name": "Mongolian"
     },
@@ -140,12 +140,6 @@
     "om": {
         "name": "Oromo"
     },
-    "pt-PT": {
-        "name": "pt_PT"
-    },
-    "ro-MD": {
-        "name": "ro_MD"
-    },
     "rof": {
         "name": "Rombo"
     },
@@ -161,8 +155,20 @@
     "seh": {
         "name": "Sena"
     },
+    "zh-Hans": {
+        "name": "Simplified Chinese"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
+    },
+    "de-CH": {
+        "name": "Swiss High German"
+    },
     "twq": {
         "name": "Tasawaq"
+    },
+    "zh-Hant": {
+        "name": "Traditional Chinese"
     },
     "hsb": {
         "name": "Upper Sorbian"
@@ -178,12 +184,6 @@
     },
     "dje": {
         "name": "Zarma"
-    },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
-    "zh-Hant": {
-        "name": "zh_Hant"
     },
     "sq": {
         "name": "Албанча"
