--- a/resources/language/vi.json
+++ b/resources/language/vi.json
@@ -1,24 +1,27 @@
 {
-    "de-AT": {
-        "name": "de_AT"
-    },
     "en-AU": {
-        "name": "en_AU"
+        "name": "Australian English"
+    },
+    "de-AT": {
+        "name": "Austrian German"
     },
     "en-CA": {
-        "name": "en_CA"
-    },
-    "es-MX": {
-        "name": "es_MX"
+        "name": "Canadian English"
     },
     "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+        "name": "Canadian French"
     },
     "pt-PT": {
-        "name": "pt_PT"
+        "name": "European Portuguese"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "zh-Hans": {
+        "name": "Simplified Chinese"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     },
     "ar": {
         "name": "Tiếng Ả Rập"
@@ -458,10 +461,7 @@
     "zu": {
         "name": "Tiếng Zulu"
     },
-    "zh-Hans": {
-        "name": "zh_Hans"
-    },
     "zh-Hant": {
-        "name": "zh_Hant"
+        "name": "Traditional Chinese"
     }
 }
