--- a/resources/language/zh-Hant.json
+++ b/resources/language/zh-Hant.json
@@ -440,28 +440,28 @@
     "rof": {
         "name": "蘭博文"
     },
-    "de-AT": {
-        "name": "de_AT"
-    },
     "en-AU": {
-        "name": "en_AU"
+        "name": "Australian English"
     },
-    "en-CA": {
-        "name": "en_CA"
+    "de-AT": {
+        "name": "Austrian German"
     },
     "en-GB": {
-        "name": "en_GB"
+        "name": "British English"
     },
-    "es-MX": {
-        "name": "es_MX"
+    "en-CA": {
+        "name": "Canadian English"
     },
     "fr-CA": {
-        "name": "fr_CA"
-    },
-    "fr-CH": {
-        "name": "fr_CH"
+        "name": "Canadian French"
     },
     "pt-PT": {
-        "name": "pt_PT"
+        "name": "European Portuguese"
+    },
+    "es-MX": {
+        "name": "Mexican Spanish"
+    },
+    "fr-CH": {
+        "name": "Swiss French"
     }
 }
